update class